name:
  "coq-zoo-demo"
synopsis:
  "Zoo demo"
opam-version:
  "2.0"
maintainer:
  "clement.allain@inria.fr"
authors: [
  "Clément Allain"
]
homepage:
  "https://github.com/clef-men/zoo_demo"
bug-reports:
  "https://github.com/clef-men/zoo_demo/issues"

pin-depends: [
  ["coq-zoo.dev" "git+https://github.com/clef-men/zoo.git#main"]
  ["coq-zoo-std.dev" "git+https://github.com/clef-men/zoo.git#main"]
]
depends: [
  "coq-zoo-std"
]

build: [
  make "-j%{jobs}%"
]
